Bug 581769 - fix JS_ValueToId on xml object. remove spurious iterator assert (r=waldo)